--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 5.0.x
+    - name: Clean
+      run: dotnet clean ./JM.Formox.MicroService.sln --configuration Debug && dotnet nuget locals all --clear
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
